--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@picocss/pico": "^2.1.1"
   },
   "devDependencies": {
-    "astro": "^5.5.5",
-    "@astrojs/sitemap": "^3.3.0",
+    "astro": "5.7.5",
+    "@astrojs/sitemap": "3.3.1",
     "@biomejs/biome": "^1.9.4"
   }
 }
