--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@picocss/pico": "^2.1.1"
   },
   "devDependencies": {
-    "astro": "5.7.5",
-    "@astrojs/sitemap": "3.3.1",
-    "@biomejs/biome": "^1.9.4"
+    "@astrojs/sitemap": "^3.4.1",
+    "astro": "^5.12.0"
   }
 }
