--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "bun run build &&npm run preview",
+    "test": "echo 'No tests :-('",
     "dev": "astro dev",
     "build": "astro build",
-    "serve": "bun run build && serve dist",
-    "cloud": "echo 'Deploying to Cloudflare...'",
     "preview": "astro preview",
     "astro": "astro",
-    "preprod": "bun run build",
-    "prod": "git add . && git commit -m 'Deploy' && git push origin master"
+    "lint": "oxlint",
+    "prerelease": "bun run build",
+    "release": "git add . && git commit -m 'Release' && git push origin master"
   },
   "dependencies": {
     "@picocss/pico": "^2.1.1"
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.4.1",
-    "astro": "^5.12.0"
+    "astro": "^5.12.0",
+    "oxlint": "^1.7.0"
   }
 }
