--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "oxlint",
     "prerelease": "bun run build",
     "release": "git add . && git commit -m 'Release' && git push origin master"
   },
@@ -24,7 +23,6 @@
   },
   "devDependencies": {
     "@astrojs/sitemap": "^3.4.1",
-    "astro": "^5.12.0",
-    "oxlint": "^1.7.0"
+    "astro": "^5.12.0"
   }
 }
