--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "bun run build &&npm run preview",
     "test": "echo 'No tests :-('",
-    "dev": "npm run chrome && astro dev",
+    "dev": "astro dev",
     "chrome": "start chrome -incognito -auto-open-devtools-for-tabs http://localhost:4321",
     "build": "astro build",
     "preview": "astro preview",
@@ -23,7 +23,7 @@
     "@picocss/pico": "^2.1.1"
   },
   "devDependencies": {
-    "@astrojs/sitemap": "^3.4.2",
-    "astro": "^5.12.8"
+    "@astrojs/sitemap": "^3.6.0",
+    "astro": "^5.16.6"
   }
 }
